css/db.css
/* Schrottfilme - Webinterface. (c) 2017 by Heiko Schaefer <heiko@rangun.de> */

body {
  margin: 0px;
  border: 0px;
  padding: 0px;
  background-color: #eeeeee;
  font-family: 'Verdana', sans-serif;
  font-size: 9pt;
}

a {
  text-decoration: none;
  color: inherit;
  font-size: 9pt;
}

ul {
  margin-bottom: 0px;
}

li {
  font-size: 9pt;
}

input[type=text] {
  padding-top: 5px; 
  border: 2px solid #7e7eff; 
  border-radius: 5px;
}

input[type=text]:focus {
  border-color: blue;
}

select {
  padding-top: 5px; 
  border: 2px solid #7e7eff; 
  border-radius: 5px;
}

select:focus {
  border-color: blue;
}

table, th, td {
  margin: 0px;
  border: 0px;
  padding: 0px;
  vertical-align: top;
}

.cat_nav {
  background-color: #dddddd;
}

th.cat_nav {
  background-color: #bbbbbb;
  padding-bottom: 2px;
  font-size: 9pt;
}

ul.cat_nav {
  padding-left: 20px;
  list-style-type: circle; 
}

li.cat_nav_active {
  list-style-type: square;
}

.list {
  font-family: 'Arial', sans-serif;
  font-size: 10.5pt;
}

table.list {
  background-color: #dddddd;
  min-width: 1170px;
}

td.list {
  padding-top: 1px;
  padding-bottom: 1px;
  padding-left: 5px;
  padding-right: 5px;
}

a.list {
  background-color: #eeeeff;
}

a.note_link {
  color: #3333ff;
}

a.pdflink {
  color: #3333ff; 
  padding-top: 12px; 
  padding-left: 5px; 
  padding-right: 60px;
  background: transparent url('../img/application-pdf.png') no-repeat right;
}
	    
.hack {
  font-family: Hack, 'Lucida Console', monospace;
}

.ltitle {
  font-weight: bold;
  max-width: 500px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.hasTooltip span {
    display: none;
    text-decoration: none;
    font-size: 8.5pt;
    padding: 3px;
}

.hasTooltip:hover span {
    display: block;
    position: absolute;
    background-color: #eeeeff;
    border: 1px solid #CCCCCC;
    margin: 2px 10px;
}

.lingos {
  font-style: italic;
}

.duration {
  font-family: 'Courier New', 'Lucida Console', monospace;
}

.min_th {
  width: 0%;
}

.max_th {
  width: 100%;
}

.cat_0 { 
  color: #3333ff;
}

.cat_1 {
  color: black;
}

.cat_2 {
  color: #66339f;
}

.cat_3 {
  color: #253100;
}

.cat_4 {
  color: #510000;
}

table.list tr.parity_0 {
  background-color: #bbbbbb;
}

table.list tr.parity_1 {
  background-color: #cccccc;
}

td.list_filter {
  font-family: 'Verdana', sans-serif; 
  font-size: 9pt;
  padding: 2px;
  padding-top: 4px;
}

tr.list_filter { 
  background-color: #9d9dcf;
}

.notes {
  padding: 8px;
  font-size: 8pt;
}

.red_text {
  color: red;
}

a.page_nr {
  display: block;
}

td.page_nr {
  font-family: 'Arial', sans-serif;
  font-size: 9pt;
  padding: 3px;
  border-width: 1px;
  border-style:solid;
  border-color: #ddddff;
  background-color: white;
  color: #3333ff;
}

td.page_nr.page_active {
  color: white;
  background-color: #3333ff;
}

#layout {
  height: 100%;
}

#layout_left {
  padding-top: 10px;
  padding-left: 10px;
  width: 220px;
  max-width: 220px;
  min-width: 220px;
}

#layout_right {
  padding-top: 10px;
  padding-right: 10px;
  width: 220px;
  max-width: 220px;
  min-width: 220px;
}

#layout_top {
  font-family: 'Arial', sans-serif;
  background-color: #cccccc;
  padding-top: 10px;
  padding-bottom: 10px;
  height: 60px;
  min-height: 60px;
  max-height: 60px;
}

#layout_bottom {
  background-color: #cccccc;
  padding-top: 5px;
  padding-bottom: 5px;
  height: 20px;
  min-height: 20px;
  max-height: 20px;
}

#layout_content {
  padding: 10px;
}

#list_topbot {
  font-weight: normal;
  background-color: #eeeeff;
  outline-style: solid;
  outline-width: 1px;
  outline-color: #ccccff;
}

#title_link {
  font-size: 20pt;
  text-shadow: 1px 1px #bbbbbb, 2px 2px #bbbbbb, 3px 3px #bbbbbb;
  top: 0;
  left: 0;
  transition: all 0.3s ease-out;
}

#list_filter_id {
  text-align: right;
  float: right;
  width: 50px;
}

#list_filter_ltitle {
  width: 100%;
}

#filter_submit { 
  display:none;
}

